# horribleTrianglesNoBloat

./: CMakeLists.txt  Triangle.h  engine.cpp  engine.h  main.cpp
